--- a/index.html
+++ b/index.html
@@ -117,19 +117,19 @@
       <div class="popular-foods__filters sushi__hide-scrollbar" data-aos="fade-up">
         <button class="popular-foods__filter-btn active">All</button>
         <button class="popular-foods__filter-btn">
-          <img src="/assets/sushi-9.png" alt="sushi 9" />
+          <img src="assets/sushi-9.png" alt="sushi 9" />
           Sushi
         </button>
         <button class="popular-foods__filter-btn">
-          <img src="/assets/sushi-8.png" alt="sushi 8" />
+          <img src="assets/sushi-8.png" alt="sushi 8" />
           Ramen
         </button>
         <button class="popular-foods__filter-btn">
-          <img src="/assets/sushi-7.png" alt="sushi 7" />
+          <img src="assets/sushi-7.png" alt="sushi 7" />
           Udon
         </button>
         <button class="popular-foods__filter-btn">
-          <img src="/assets/sushi-6.png" alt="sushi 6" />
+          <img src="assets/sushi-6.png" alt="sushi 6" />
           Danggo
         </button>
         <button class="popular-foods__filter-btn">All</button>
@@ -319,7 +319,7 @@
 
     <section class="subscription flex-center" id="services">
       <h2 data-aos="flip-down">
-        Get offers stright <br />
+        Get offers straight <br />
         to your inbox
       </h2>
       <p data-aos="fade-up">Sign up for the Sushiman newsletter</p>
